[package]
name = "iced_webview_v2"
version = "0.1.6"
edition = "2021"
rust-version = "1.90.0"
description = "An easily embedded webview library for iced"
authors = ["LegitCamper", "Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/iced_webview_v2/"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "iced_webview"

[package.metadata.docs.rs]
features = ["docs_only"]
all-features = false
no-default-features = true

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["litehtml"]
blitz = [
    "dep:blitz-dom",
    "dep:blitz-html",
    "dep:blitz-paint",
    "dep:blitz-traits",
    "dep:blitz-net",
    "dep:anyrender",
    "dep:anyrender_vello_cpu",
    "dep:peniko",
    "dep:cursor-icon",
    "dep:keyboard-types",
    "dep:smol_str",
    "dep:reqwest",
    "dep:tokio",
]
litehtml = ["dep:litehtml", "dep:reqwest"]
servo = ["dep:servo", "dep:urlencoding", "dep:rustls", "dep:euclid", "dep:keyboard-types-servo", "dep:dpi"]
cef = ["dep:cef", "dep:urlencoding"]
docs_only = []

[dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio", "lazy"] }
rand = "0.8.5"
litehtml = { version = "0.2.4", features = ["pixbuf", "html"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
url = "2.5.2"

# Blitz engine deps (git: stylo 0.12, matching Servo)
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "05c9892932a3d03858f634d416606a376052e544", optional = true }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "05c9892932a3d03858f634d416606a376052e544", optional = true }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", rev = "05c9892932a3d03858f634d416606a376052e544", optional = true }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "05c9892932a3d03858f634d416606a376052e544", optional = true }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "05c9892932a3d03858f634d416606a376052e544", optional = true }
anyrender = { version = "0.7", optional = true }
anyrender_vello_cpu = { version = "0.9", optional = true }
peniko = { version = "0.6", optional = true }
cursor-icon = { version = "1", optional = true }
keyboard-types = { version = "0.7", optional = true }
smol_str = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

# Servo engine deps
servo = { git = "https://github.com/servo/servo", branch = "main", package = "servo", optional = true }
urlencoding = { version = "2", optional = true }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"], optional = true }
euclid = { version = "0.22", optional = true }
keyboard-types-servo = { package = "keyboard-types", version = "0.8", optional = true }
dpi = { version = "0.1", optional = true }

# CEF engine deps
cef = { version = "145", default-features = false, optional = true }

# When both blitz and servo features are resolved, Cargo sees two copies of
# stylo (crates.io for blitz, git for servo). Patch crates.io to use servo's
# git rev so they resolve to a single copy.
[patch.crates-io]
stylo = { git = "https://github.com/servo/stylo", rev = "ab75cec2f1fdb1c6d5731b4c685a3bfc798f9619" }
stylo_traits = { git = "https://github.com/servo/stylo", rev = "ab75cec2f1fdb1c6d5731b4c685a3bfc798f9619" }
stylo_atoms = { git = "https://github.com/servo/stylo", rev = "ab75cec2f1fdb1c6d5731b4c685a3bfc798f9619" }
stylo_dom = { git = "https://github.com/servo/stylo", rev = "ab75cec2f1fdb1c6d5731b4c685a3bfc798f9619" }
selectors = { git = "https://github.com/servo/stylo", rev = "ab75cec2f1fdb1c6d5731b4c685a3bfc798f9619" }

[[example]]
name = "webview"

[[example]]
name = "email"

[[example]]
name = "embedded_webview"
